--- a/pages/about.html
+++ b/pages/about.html
@@ -5,18 +5,18 @@ title: About Us
 ---
 <p>
   Since 1998,
-  Software Carpentry has been teaching researchers in science, engineering, medicine, and related disciplines
+  Software Carpentry has been teaching researchers
   the computing skills they need to get more done in less time and with less pain.
   Our <a href="{{site.baseurl}}/team/">volunteer instructors</a>
   have run <a href="{{site.baseurl}}/workshops/past/">hundreds of events</a>
-  for thousands of scientists in the past two and a half years.
+  for over 22,000 researchers since 2012.
   All of our <a href="{{site.baseurl}}/lessons/">lesson materials</a> are freely reusable
   under the <a href="{{site.baseurl}}/license/#cc-by">Creative Commons - Attribution license</a>.
 </p>
 <p>
   The <a href="{{site.baseurl}}/scf/">Software Carpentry Foundation</a>
   and its sibling organization <a href="{{site.dc_url}}">Data Carpentry</a>
-  are members of <a href="http://numfocus.org">NumFOCUS</a>,
+  are fiscally sponsored projects of <a href="http://numfocus.org">NumFOCUS</a>,
   a 501(c)3 non-profit incorporated in the United States.
 </p>
 
@@ -28,8 +28,8 @@ title: About Us
       Software Carpentry is made possible by the generous support of
       <a href="{{site.baseurl}}/scf/partners/">our partners</a>
       and by the hard work of <a href="{{site.baseurl}}/join/">our volunteers</a>.
-      We offer <a href="{{site.baseurl}}/scf/join/">several levels of institutional engagement</a>,
-      and individuals can <a href="{{site.baseurl}}/join">become instructors</a>.
+      We offer <a href="{{site.baseurl}}/membership/">several levels of institutional engagement</a>,
+      and individuals can <a href="{{site.baseurl}}/join">participate</a> become instructors.
     </p>
   </div>
 
@@ -49,7 +49,7 @@ title: About Us
     <h4>Conversations</h4>
     <p>
       You can <a href="mailto:{{site.contact}}">send us email</a>,
-      <a href="{{site.baseurl}}/join/#discussion">join our mailing lists</a>,
+      <a href="{{site.baseurl}}/join/">sign up for our newsletter</a>,
       <a href="{{site.baseurl}}/blog/">read our blog</a>,
       <a href="{{site.data.socialmedia.Twitter.url}}">follow us on Twitter</a>,
       or browse <a href="{{site.data.socialmedia.GitHub.url}}">our repositories on GitHub</a>.
@@ -86,9 +86,9 @@ title: About Us
   <div class="medium-4 columns">
     <h4>Buy Things</h4>
     <p>
-      Want to show your support?
-      Our <a href="http://www.cafepress.com/swcarpentry">online store</a>
-      offers everything from maternity shirts to messenger bags,
+      Want to show your support? You can <a href="{{site.baseurl}}/join/donate/">donate</a>,
+      or vist our <a href="http://www.cafepress.com/swcarpentry">online store</a>
+      offering everything from maternity shirts to messenger bags,
       and you can <a href="http://www.stickermule.com/user/1070632011/stickers">buy our stickers</a> too.
     </p>
   </div>
@@ -100,17 +100,22 @@ title: About Us
 
   <div class="medium-4 columns" align="center">
     <h4>Workshops</h4>
-    <img src="{{site.filesurl}}/graphs/workshops-2015-10.png" alt="Workshop Growth" />
+    <a href="{{site.filesurl}}/graphs/workshops.svg"><img src="{{site.filesurl}}/graphs/workshops.svg" alt="Workshop Growth" /></a>
+    <br>n=863
   </div>
 
   <div class="medium-4 columns" align="center">
     <h4>Learners</h4>
-    <img src="{{site.filesurl}}/graphs/learners-2015-10.png" alt="Learner Growth" />
+    <a href="{{site.filesurl}}/graphs/learners.svg"><img src="{{site.filesurl}}/graphs/learners.svg" alt="Learner Growth" /></a>
+    <br>n=22,353
   </div>
 
   <div class="medium-4 columns" align="center">
     <h4>Instructors</h4>
-    <img src="{{site.filesurl}}/graphs/instructors-2015-10.png" alt="Instructor Growth" />
+    <a href="{{site.filesurl}}/graphs/instructors.svg"><img src="{{site.filesurl}}/graphs/instructors.svg" alt="Instructor Growth" /></a>
+    <br>n=968
   </div>
+
+  Stats updated on 2017-06-26
 
 </div> <!-- /row -->
