amending maintainer to Nathan Moore

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -291,7 +291,7 @@ redirect_from:
     <td>Plotting and Programming in Python</td>
     <td><a href="https://swcarpentry.github.io/python-novice-gapminder" target="_blank" class="icon-browser" title="icon-browser"></a></td>
     <td><a href="https://github.com/swcarpentry/python-novice-gapminder" target="_blank" class="icon-github" title="icon-github"></a></td>
-    <td><a href="{{site.baseurl}}/team/#wilson_g">Greg Wilson</a></td>
+    <td><a href="{{site.baseurl}}/team/#ntmoore">Nathan Moore</a></td>
   </tr>
    
 </table>
