Adding draft Python Gapminder lesson so people can find it (#765)
* Update lessons.html

Not sure who to credit as author - Greg has most commits of anyone so I chose him ! There were 16 authors!

* amending maintainer to Nathan Moore

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -287,4 +287,11 @@ redirect_from:
     <td><a href="https://github.com/alex-konovalov/gap-lesson" target="_blank" class="icon-github" title="icon-github"></a></td>
     <td><a href="{{site.baseurl}}/team/#konovalov_alexander">Alexander Konovalov</a></td>
   </tr>
+  <tr>
+    <td>Plotting and Programming in Python</td>
+    <td><a href="https://swcarpentry.github.io/python-novice-gapminder" target="_blank" class="icon-browser" title="icon-browser"></a></td>
+    <td><a href="https://github.com/swcarpentry/python-novice-gapminder" target="_blank" class="icon-github" title="icon-github"></a></td>
+    <td><a href="{{site.baseurl}}/team/#ntmoore">Nathan Moore</a></td>
+  </tr>
+   
 </table>
