Fix typo in accessibility checklist

--- a/pages/checklists_accessibility.html
+++ b/pages/checklists_accessibility.html
@@ -136,7 +136,7 @@ redirect_from:
     <p>
       As is often the case with accessibility provisions,
       all of these things will also improve the workshop
-      for people whose hearing is not ipmaired.
+      for people whose hearing is not impaired.
     </p>
   </li>
 <p>
