--- a/pages/about.html
+++ b/pages/about.html
@@ -2,6 +2,7 @@
 layout: page-fullwidth
 permalink: /about/
 title: About Us
+excerpt: Software Carpentry teaches researchers foundational computing skills
 ---
 <p>
   Since 1998,
