--- a/pages/audience.html
+++ b/pages/audience.html
@@ -4,6 +4,7 @@ permalink: /audience/
 title: Our Audience
 redirect_from:
   - /pages/audience.html
+excerpt: Software Carpentry uses learner profiles to inform what we teach
 ---
 <div class="row">
   <div class="medium-3 columns">
