--- a/pages/checklists_accessibility.html
+++ b/pages/checklists_accessibility.html
@@ -4,6 +4,7 @@ permalink: /checklists/accessibility/
 title: Accessibility Checklist
 redirect_from:
   - /workshops/checklists/accessibility.html
+excerpt: Software Carpentry strives to make workshops accessible to everyone
 ---
 <p>
   Software Carpentry values the participation of every member of the
