--- a/pages/checklists_admin.html
+++ b/pages/checklists_admin.html
@@ -4,6 +4,7 @@ permalink: /checklists/admin/
 title: Admin Checklist
 redirect_from:
   - /workshops/checklists/admin.html
+excerpt: Software Carpentry's admin staff member supports workshop hosts
 ---
 <p>
   Admin is the staff at Software Carpentry's (virtual) headquarters
