--- a/pages/checklists_helper.html
+++ b/pages/checklists_helper.html
@@ -4,6 +4,7 @@ permalink: /checklists/helper/
 title: Helper Checklist
 redirect_from:
   - /workshops/checklists/helpers.html
+excerpt: The role a helper plays at a Software Carpentry workshop
 ---
 <p>
   Helpers provide assistance to workshop learners during practical sessions.
