--- a/pages/checklists_host.html
+++ b/pages/checklists_host.html
@@ -4,6 +4,7 @@ permalink: /checklists/host/
 title: Host Checklist
 redirect_from:
   - /workshops/checklists/host.html
+excerpt: The responsibilities of a host at a Software Carpentry workshop 
 ---
 <p>
   A workshop host is a person (or group of people)
