--- a/pages/checklists_instructor.html
+++ b/pages/checklists_instructor.html
@@ -5,6 +5,7 @@ title: Instructor Checklist
 redirect_from:
   - /workshops/checklists/instructors.html
   - /workshops/checklists/travel.html
+excerpt: Checklist for an instructor at a Software Carpentry workshop 
 ---
 <p>
   Instructors lecture and lead practical exercises.
