--- a/pages/checklists_lead.html
+++ b/pages/checklists_lead.html
@@ -4,6 +4,7 @@ permalink: /checklists/lead/
 title: Lead Instructor Checklist
 redirect_from:
   - /workshops/checklists/lead_instructor.html
+excerpt: Checklist for a lead instructor at a Software Carpentry workshop 
 ---
 <p>
   Along with the
