--- a/pages/checklists_learner.html
+++ b/pages/checklists_learner.html
@@ -4,6 +4,7 @@ permalink: /checklists/learner/
 title: Learner Checklist
 redirect_from:
   - /workshops/checklists/learners.html
+excerpt: Checklist for a learner at a Software Carpentry workshop 
 ---
 <p>
   Learners are attending a workshop to improve their computing skills
