--- a/pages/commenting.html
+++ b/pages/commenting.html
@@ -4,6 +4,7 @@ permalink: /commenting/
 title: Commenting Policy
 redirect_from:
   - /pages/commenting.html
+excerpt: Our site's commenting policy is geared towards making our blog a friendly and participatory space
 ---
 <p>
   This version of the site commenting policy was posted in November 2015.
