--- a/pages/conduct.html
+++ b/pages/conduct.html
@@ -4,6 +4,7 @@
 #title: Code of Conduct
 #redirect_from:
 #  - /conduct.html
+excerpt: Software Carpentry's Code of Conduct is geared towards making participation an enjoyable and fulfilling experience for all
 ---
 <p>
   Software Carpentry workshops are community events intended for
