--- a/pages/contact.html
+++ b/pages/contact.html
@@ -2,6 +2,7 @@
 layout: page-fullwidth
 permalink: /contact/
 title: Contact Us
+excerpt: Contact Software Carpentry by email or through Twitter
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/2013-01-mckellar-slice.jpg" alt="McKellar 2013" />
