--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,6 +4,7 @@ permalink: /faq/
 title: Frequently Asked Questions
 redirect_from:
   - /faq.html
+excerpt: These are our most frequently asked questions
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/2013-01-mcgill.png" class="img-responsive" alt="Workshop at McGill University, January 2012" />
