--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page-fullwidth
 permalink: /index.html
-excerpt: Teaching researchers the computing skills they need to get more done in less time
+excerpt: Teaching researchers the foundational computing skills they need to get more done in less time
 ---
 
 <div class="row">
