--- a/pages/instructor_training.html
+++ b/pages/instructor_training.html
@@ -3,4 +3,5 @@ layout: redirect
 sitemap: false
 permalink: /instructor-training/
 redirect_to:  https://swcarpentry.github.io/instructor-training/
+excerpt: Our instructor training curriculum is updated six-monthly
 ---
