--- a/pages/join.html
+++ b/pages/join.html
@@ -5,7 +5,7 @@ title: Join Us
 redirect_from:
   - /pages/join.html
   - /pages/training.html
-excerpt: Find ways to engage with the Software Carpentry Community. Join our newsletter, or attend a community event.
+excerpt: Find ways to engage with the Software Carpentry Community. Subscribe to our newsletter, join our slack channel, or attend a community event.
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/scipy-2015-c-slice.jpg" alt="SciPy 2015" />
