--- a/pages/join_confirm.html
+++ b/pages/join_confirm.html
@@ -2,6 +2,7 @@
 layout: page-fullwidth
 permalink: /join/confirm/
 title: Thank You
+excerpt: Thank you for getting in touch about a hosting a workshop
 ---
 <div align="center">
   <h4>
