--- a/pages/join_donate.html
+++ b/pages/join_donate.html
@@ -2,6 +2,7 @@
 layout: page-fullwidth
 permalink: /join/donate/
 title: Donate
+excerpt: Support our work by donating directly to Software Carpentry
 ---
 <p>
   The Software Carpentry Foundation's mission is to help researchers get more done with computers in less time and with less pain.
