--- a/pages/join_enroll.html
+++ b/pages/join_enroll.html
@@ -2,6 +2,7 @@
 layout: page-fullwidth
 permalink: /join/enroll/
 title: Apply for Instructor Training
+excerpt: register for Software or Data Carpentry instructor training
 ---
 <div>
   <p>
