--- a/pages/join_helpwanted.html
+++ b/pages/join_helpwanted.html
@@ -4,6 +4,7 @@ permalink: /join/help/
 title: Help Wanted
 redirect_from:
   - /pages/projects.html
+excerpt: help wanted with projects or tasks
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/burma-2015-slice.jpg" alt="Burma 2015" />
