--- a/pages/join_related.html
+++ b/pages/join_related.html
@@ -2,6 +2,7 @@
 layout: page-fullwidth
 permalink: /join/projects/
 title: Related Projects
+excerpt: Our sibling project Data Carpentry develops and teaches workshops on the fundamental data skills needed to conduct research
 ---
 <div class="row">
   <div class="medium-4 columns">
