--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -4,6 +4,7 @@ permalink: /lessons/
 title: Our Lessons
 redirect_from:
   - /lessons.html
+excerpt: All our lessons are created collaboratively and can be freely re-used, provided you cite us as the original source
 ---
 <div class="row">
   <div class="medium-4 columns">
