--- a/pages/lessons_dashboard.html
+++ b/pages/lessons_dashboard.html
@@ -4,6 +4,7 @@ permalink: /lessons/dashboard/
 title: Development Dashboard
 redirect_from:
   - /pages/dashboard.html
+excerpt: dashboard for lesson status
 ---
 <p>Last rebuilt {{site.data.dashboard.timestamp}}.</p>
 {% for record in site.data.dashboard.records %}
