--- a/pages/lessons_previous.html
+++ b/pages/lessons_previous.html
@@ -2,6 +2,7 @@
 layout: page-fullwidth
 permalink: /lessons/previous/
 title: Previous Material
+excerpt: previous releases of lessons
 ---
 <h2 id="v5">Version 5</h2>
 
