--- a/pages/reading.html
+++ b/pages/reading.html
@@ -5,6 +5,7 @@ title: Reading Material
 redirect_from:
   - /bib/bib.html
   - /bib/reading.html
+excerpt: A list of books and articles we recommend
 ---
 <h2>Books</h2>
 
