--- a/pages/scf.html
+++ b/pages/scf.html
@@ -13,6 +13,7 @@ redirect_from:
   - /scf/minutes.html
   - /scf/steering-committee.html
   - /scf/workshops.html
+excerpt: The Software Carpentry Foundation oversees all aspects of Software Carpentry's operations
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/2014-capetown-slice.png" alt="Capetown Workshop 2014" />
