--- a/pages/scf_history.html
+++ b/pages/scf_history.html
@@ -4,6 +4,7 @@ permalink: /scf/history/
 title: The History of Software Carpentry
 redirect_from:
   - /scf/history.html
+excerpt: History of the Software Carpentry Foundation
 ---
 <div class="row">
   <div class="medium-6 columns">
