--- a/pages/subcom.html
+++ b/pages/subcom.html
@@ -2,6 +2,7 @@
 layout: page-fullwidth
 permalink: /join/subcom_and_tf/
 title: Subcommittees and Task Forces
+excerpt: our current sub-committees and task forces
 ---
 
 <p>
