--- a/pages/subcom_maintainers.html
+++ b/pages/subcom_maintainers.html
@@ -12,6 +12,7 @@ activities:
     description: "Maintainers develop and vote on changes to the templates and tooling used for our workshops and lessons."
   - title: "Publication"
     description: "Maintainers decide on the publication (release) schedule for lessons."
+excerpt: Lesson maintainers merge suggested improvements to lessons and decide on lesson release schedules
 ---
 
 <h1>{{page.subcomName}} Subcommittee</h1>
