--- a/pages/subcom_mentorship.html
+++ b/pages/subcom_mentorship.html
@@ -68,6 +68,7 @@ members:
   - name: "Tracy Teal"
     twitter: "@tracykteal"
     twitterURL: "https://twitter.com/tracykteal"  
+excerpt: The Mentoring Subcommittee supports instructors as they progress through training, teaching, curriculum development, and other community-related activities
 ---
 
 <h1>{{page.subcomName}} Subcommittee</h1>
