--- a/pages/subcom_template.html
+++ b/pages/subcom_template.html
@@ -25,6 +25,7 @@ members:
   - name: "First Last D"
     twitter: "@first_lasts_twitter_handle"
     twitterURL: "https://twitter.com/first_lasts_twitter_handle"
+excerpt: ways to get involved
 ---
 
 <h1>{{page.subcomName}} Subcommittee</h1>
