--- a/pages/team.html
+++ b/pages/team.html
@@ -6,6 +6,7 @@ map_url: instructors.json
 map_element: map_canvas
 redirect_from:
   - /pages/team.html
+excerpt: our current team
 ---
 <div id="map_canvas" style="width: 98%; height: 500px; margin-left:auto; margin-right: auto; margin-bottom: 15px"></div>
 
