--- a/pages/testimonials.html
+++ b/pages/testimonials.html
@@ -4,6 +4,7 @@ permalink: /testimonials/
 title: Testimonials
 redirect_from:
   - /pages/testimonials.html
+excerpt: testimonials about Software Carpentry from our community
 ---
 <div align="center">
   <img src="{{site.filesurl}}/workshops/mit-2013-slice.jpg" alt="MIT 2013" />
