--- a/pages/workshops.html
+++ b/pages/workshops.html
@@ -10,6 +10,7 @@ redirect_from:
   - /workshops/assess/post-learner.html
   - /workshops/assess/pre-learner.html
   - /workshops/setup.html
+excerpt: definition of a Software Carpentry workshop
 ---
 <p>
   A Software Carpentry workshop is hands-on two-day event
