--- a/pages/workshops_operations.html
+++ b/pages/workshops_operations.html
@@ -5,6 +5,7 @@ title: Workshop Operations
 redirect_from:
   - /workshops/operations.html
   - /workshops/checklists/index.html
+excerpt: checklist for workshop operations
 ---
 <p>
   This guide includes
