--- a/pages/workshops_pitch.html
+++ b/pages/workshops_pitch.html
@@ -4,6 +4,7 @@ permalink: /workshops/pitch/
 title: "Pitching a Workshop"
 redirect_from:
   - /workshops/pitch.html
+excerpt: how to pitch a Software Carpentry workshop at your institution
 ---
 <h2>What is Software Carpentry?</h2>
 <p>
