--- a/pages/workshops_request.html
+++ b/pages/workshops_request.html
@@ -4,6 +4,7 @@ permalink: /workshops/request/
 title: Request a Workshop
 redirect_from:
   - /workshops/request.html
+excerpt: how to request a Software Carpentry workshop at your institution
 ---
 <p>
   If you would like to host a Software Carpentry workshop at your
