--- a/pages/scf_members.html
+++ b/pages/scf_members.html
@@ -4,7 +4,7 @@ permalink: /scf/members/
 title: Foundation Members
 redirect_from:
   - /scf/members.html
-excerpt: our current members
+excerpt: Learn more about organizations that support the 
 ---
 <p>
 The <a href="{{site.github_url}}/board/blob/master/governance.md">Software Carpentry Foundation's membership</a>
