--- a/pages/join.html
+++ b/pages/join.html
@@ -7,18 +7,26 @@ redirect_from:
   - /pages/training.html
 excerpt: Find ways to engage with the Software Carpentry Community. Subscribe to our newsletter, join our slack channel, or attend a community event.
 ---
-<div align="center">
-  <img src="{{site.filesurl}}/workshops/scipy-2015-c-slice.jpg" alt="SciPy 2015" />
-</div>
-<br>
+
+<h2 id="how">Join Us</h2>
+<p>
+There are lots of ways to support the work of Software and Data Carpentry. Institutions such as universities and research instiutes can best support 
+us by becoming a <a href="https://software-carpentry.org/membership/">member organization</a>. 
+</p>
+<p>
+Individuals can also support us. Teaching or helping at workshops, becoming an instructor, taking part in our activities, serving on committees like 
+mentoring, talking to others in our slack channel, and contributing to our email discussions are just some of the ways you can feel
+part of the global Carpentries community. See all our pathways and channels below.
+</p>
+
 <div align="center">
 <a href="http://eepurl.com/cfODMH">
   <button class="btn">
-    Join our Mailing List
+    Sign up for our newsletter
   </button>
 </a>
   <br>
- <a href="http://us14.campaign-archive2.com/home/?u=46d7513c798c6bd41e5f58f4a&id=50c3e6d6fe">Past issues</a> 
+ <a href="http://us14.campaign-archive2.com/home/?u=46d7513c798c6bd41e5f58f4a&id=50c3e6d6fe">See past issues</a>
 
 </div>
 
@@ -34,7 +42,7 @@ There are two steps to becoming an instructor:
       <b>Take the <a href="{{site.training_url}}">instructor training course</a></b>:
       This course runs over two full days and covers the basics of
       educational psychology, instructional design, and how to apply both
-      to teaching Software Carpentry and Data Carpentry materials.
+      to teaching Software Carpentry and Data Carpentry workshops.
     </p>
   </li>
   <li>
@@ -49,20 +57,19 @@ There are two steps to becoming an instructor:
 
 <p align="center">
   <em>
-    Most of our instructors are trained through organizational agreements 
-    with affiliated institutions. If you have been asked to provide 
-    information associated with this type of training, 
-    please fill in <a href="{{site.amy_url}}/request_training/">this form</a>. 
-    If you are not affiliated with one of our partner organizations, we offer limited 
-    scholarships to attend online instructor training. Please fill out the form above to 
-    indicate your interest in participating in an upcoming instructor training.
+    Most of our instructors are trained through organizational agreements
+    with affiliated institutions. If you have been asked to provide
+    information associated with this type of training,
+    please fill in <a href="{{site.amy_url}}/request_training/">this form</a>.
+    Even if you are not part of an affiliated institution, please use the same form to
+    indicate your interest in training.
   </em>
 </p>
 
 <p>
   If you are already an instructor and would like to let us know that you have moved,
   changed your email address,
-  or are able to teach new lessons,
+  or are now able to teach more lessons,
   please <a href="{{site.amy_url}}/update_profile/">fill in this form</a>
   to update your information.
 </p>
@@ -204,7 +211,7 @@ an entry to
       unmoderated
     </td>
   </tr>
-  
+
 
   <tr>
     <td>
@@ -223,7 +230,7 @@ an entry to
       unmoderated
     </td>
   </tr>
-  
+
   <tr>
     <td>
       <a href="{{site.mailing_lists}}/listinfo/vancouver">vancouver</a>
