--- a/pages/join.html
+++ b/pages/join.html
@@ -10,7 +10,7 @@ excerpt: Find ways to engage with the Software Carpentry Community. Subscribe to
 
 <h2 id="how">Join Us</h2>
 <p>
-There are lots of ways to support the work of Software and Data Carpentry. Institutions such as universities and research instiutes can best support 
+There are lots of ways to support the work of Software and Data Carpentry. Institutions such as universities and research institutes can best support 
 us by becoming a <a href="https://software-carpentry.org/membership/">member organization</a>. 
 </p>
 <p>
