--- a/pages/checklists_admin.html
+++ b/pages/checklists_admin.html
@@ -63,7 +63,7 @@ excerpt: Software Carpentry's admin staff member supports workshop hosts
   <li>
     <p>
       Announce the workshop on the <a href="{{site.twitter_url}}">Software Carpentry</a> Twitter feed
-      and the <a href="{{site.mailing_lists}}/mailman/listinfo/discuss_lists.software-carpentry.org">discussion list</a>.
+      and the <a href="{{site.mailing_lists}}/listinfo/discuss">discussion list</a>.
     </p>
   </li>
   <li>
