--- a/pages/faq.html
+++ b/pages/faq.html
@@ -702,9 +702,9 @@ When open training is offered again, it will be offered online, in one-hour sess
   <dd>
     <p>
       The template for lessons lives in
-      <a href="{{site.github_url}}/styles">this GitHub repository</a>.
+      <a href="{{site.github_url}}/lesson-example">this GitHub repository</a>.
       For instructions on creating a new lesson or modifying an existing one,
-      please see the <a href="{{site.github_url}}/lesson-example">lesson example home page</a>
+      please see the <a href="http://swcarpentry.github.io/lesson-example/">lesson example home page</a>
       or <a href="https://swcarpentry.github.io/slideshows/creating-lesson/index.html">this slideshow</a>.
     </p>
   </dd>
