--- a/pages/join.html
+++ b/pages/join.html
@@ -15,7 +15,7 @@ us by becoming a <a href="https://software-carpentry.org/membership/">member org
 </p>
 <p>
 Individuals can also support us. Teaching or helping at workshops, becoming an instructor, taking part in our activities, serving on committees like 
-mentoring, talking to others in our slack channel, and contributing to our email discussions are just some of the ways you can feel
+mentoring, talking to others in our <a href="https://swc-slack-invite.herokuapp.com/">slack channel,/a>, and contributing to our email discussions are just some of the ways you can feel
 part of the global Carpentries community. See all our pathways and channels below.
 </p>
 
