--- a/pages/join.html
+++ b/pages/join.html
@@ -18,6 +18,8 @@ mentoring, talking to others in our <a href="https://swc-slack-invite.herokuapp.
 part of the global Carpentries community. See all our pathways and channels below.
 </p>
 
+<h2 id="newsletter">Newsletter</h2>
+
 <div align="center">
 <a href="http://eepurl.com/cfODMH">
   <button class="btn">
