--- a/pages/join.html
+++ b/pages/join.html
@@ -20,6 +20,9 @@ part of the global Carpentries community. See all our pathways and channels belo
 
 <h2 id="newsletter">Newsletter</h2>
 
+<p>Our newsletter, <em>Carpentry Clippings</em>, appears every second Tuesday. We welcome news from the community, including job postings.
+</p>
+
 <div align="center">
 <a href="http://eepurl.com/cfODMH">
   <button class="btn">
