--- a/pages/join.html
+++ b/pages/join.html
@@ -13,8 +13,12 @@ There are lots of ways to support the work of Software and Data Carpentry. Insti
 us by becoming a <a href="https://software-carpentry.org/membership/">member organization</a>. 
 </p>
 <p>
-Individuals can also support us. Teaching or helping at workshops, becoming an instructor, taking part in our activities, serving on committees like 
-mentoring, talking to others in our <a href="https://swc-slack-invite.herokuapp.com/">slack channel</a>, and contributing to our email discussions are just some of the ways you can feel
+Individuals can also support us by getting involved. Teaching or helping at workshops, becoming an instructor, taking part in our activities, serving on 
+  committees like <a href="https://software-carpentry.org/join/subcom/mentoring/">Mentoring</a> or task forces 
+  like <a href="https://github.com/carpentries/carpentrycon">CarpentryCon</a>, 
+  <a href="https://carpentries.typeform.com/to/BK55ld">blogging for us</a>, talking to others in 
+  our <a href="https://swc-slack-invite.herokuapp.com/">slack channel</a>, following us on <a href="https://www.facebook.com/carpentries/">Facebook</a>, and contributing to our email 
+  discussions are just some of the ways you can feel
 part of the global Carpentries community. See all our pathways and channels below.
 </p>
 
