adding Kari's group

--- a/pages/join.html
+++ b/pages/join.html
@@ -257,4 +257,27 @@ an entry to
       unmoderated
     </td>
   </tr>
+  
+   <tr>
+    <td colspan="5"><strong>Topic-specific</strong></td>
+  </tr>
+  <tr>
+    <td>
+      <a href="https://groups.google.com/a/carpentries.org/forum/#!forum/assessment-network">assessment</a>
+    </td>
+    <td>
+      <a href="https://groups.google.com/a/carpentries.org/forum/#!forum/assessment-network">(archives)</a>
+    </td>
+    <td>
+      A Google group, led by Dr Kari L. Jordan, for discussion of assessment issues.
+    </td>
+    <td>
+      5-10 messages/month
+    </td>
+    <td>
+      unmoderated
+    </td>
+  </tr>
+  
+  
 </table>
