fix typo in discussion

--- a/pages/join.html
+++ b/pages/join.html
@@ -191,7 +191,7 @@ an entry to
       <a href="{{site.mailing_lists}}/pipermail/r-discuss/">(archives)</a>
     </td>
     <td>
-      Disucssion of our R lesson and related matters.
+      Discussion of our R lesson and related matters.
     </td>
     <td>
       1-5 messages/week
