fix link to carpentries

--- a/pages/instructor_training.html
+++ b/pages/instructor_training.html
@@ -2,6 +2,6 @@
 layout: redirect
 sitemap: false
 permalink: /instructor-training/
-redirect_to:  https://swcarpentry.github.io/instructor-training/
+redirect_to:  https://carpentries.github.io/instructor-training/
 excerpt: Our instructor training curriculum is updated six-monthly
 ---
