update link to carpentries repo

--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -135,9 +135,9 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
   </tr>
   <tr id="training">
     <td>Instructor Training</td>
-    <td><a href="{{site.github_io_url}}/instructor-training" target="_blank" class="icon-browser" title="Instructor Training"></a></td>
-    <td><a href="{{site.github_url}}/instructor-training" target="_blank" class="icon-github" title="Instructor Training"></a></td>
-    <td><a href="{{site.github_io_url}}/instructor-training/reference/" target="_blank" class="icon-eye" title="Instructor Training"></a></td>
+    <td><a href="https://carpentries.github.io/instructor-training/"_blank" class="icon-browser" title="Instructor Training"></a></td>
+    <td><a href="https://github.com/carpentries/instructor-training" target="_blank" class="icon-github" title="Instructor Training"></a></td>
+    <td><a href="https://carpentries.github.io/instructor-training/reference/" target="_blank" class="icon-eye" title="Instructor Training"></a></td>
     <td>
       <a href="{{site.baseurl}}/team/#becker_erin">Erin Becker</a>,
       <a href="{{site.baseurl}}/team/#koch_christina.html">Christina Koch</a>
