update link to carpentries

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -272,7 +272,7 @@ excerpt: These are our most frequently asked questions
   <dd>
     <p>
       Becoming an instructor in the Carpentries requires that you take a two-day workshop we call
-      <a href="http://swcarpentry.github.io/instructor-training/">Instructor Training</a>.
+      <a href="http://carpentries.github.io/instructor-training/">Instructor Training</a>.
 
 To request training as an instructor, please fill out <a href="https://amy.software-carpentry.org/forms/request_training/">this form</a>.
 
