adding Latin America google group info

--- a/pages/join.html
+++ b/pages/join.html
@@ -221,6 +221,24 @@ an entry to
     </td>
   </tr>
 
+  <tr>
+    <td>
+      <a href="https://groups.google.com/a/carpentries.org/forum/#!forum/latinoamerica">latin-america</a>
+    </td>
+    <td>
+      <a href="https://groups.google.com/a/carpentries.org/forum/#!forum/latinoamerica">(archives)</a>
+    </td>
+    <td>
+      A Google Group for discussion of the Carpentry in Latin America initiative.
+    </td>
+    <td>
+      5-20 messages/month
+    </td>
+    <td>
+      unmoderated
+    </td>
+  </tr>
+  
 
   <tr>
     <td>
