--- a/pages/subcom.html
+++ b/pages/subcom.html
@@ -29,7 +29,7 @@ The existing Subcommittees and Task Forces are always happy to have new people g
   </tr>
   <tr>
     <td><a href='/join/subcom/mentoring/'>Mentoring</a></td>
-    <td>Instructor Discussion Sessions, Post-Instructor Training Support, Instructor &amp; Helper Retreat</td>
+    <td>Instructor Discussion Sessions, Post-Instructor Training Support, Mentoring Groups, Instructor &amp; Helper Retreat</td>
     <td><a href='mailto:mentoring@lists.software-carpentry.org'>mentoring@lists.software-carpentry.org</a></td>
   </tr>
 </table>
