removing the wrapping to try toforce a render

--- a/pages/subcom_mentorship.html
+++ b/pages/subcom_mentorship.html
@@ -21,25 +21,13 @@ discussion etherpads</a></li><li>writing blog posts about our ongoing and propos
 We are open to new ideas!</li></ul></p>"
 activities: 
   - title: "Instructor Discussion Sessions"
-    description: "Each week, we host four instructor discussion sessions. The sessions provide a forum where 
-    experienced and novice instructors can discuss past and/or upcoming workshops. Instructors who have just taught, 
-    are about to teach, or have just completed instructor training will  receive an email invitation to these meetings, but 
-    these sessions are open to anyone, including instructors who are completing this step as part of instructor training checkout."
+    description: "Each week, we host four instructor discussion sessions. The sessions provide a forum where experienced and novice instructors can discuss past and/or upcoming workshops. Instructors who have just taught, are about to teach, or have just completed instructor training will  receive an email invitation to these meetings, but these sessions are open to anyone, including instructors who are completing this step as part of instructor training checkout."
   - title: "Mentoring Groups"
-    description: "Mentoring groups support instructors by matching them with a personal mentor. Mentors guide 
-    small groups of mentees through specific goals including preparing to teach a workshop, maintaining lessons, 
-    building local communities, and organizing workshops. 
-    See <a href="https://github.com/carpentries/mentoring/blob/master/mentoring-groups/program-outline.md">this page</a> 
-    for a full outline of the program, and <a href="http://www.datacarpentry.org/mentoring/">this page</a> for further mentoring opportunities." 
+    description: "Mentoring groups support instructors by matching them with a personal mentor. Mentors guide small groups of mentees through specific goals including preparing to teach a workshop, maintaining lessons,  building local communities, and organizing workshops. See <a href="https://github.com/carpentries/mentoring/blob/master/mentoring-groups/program-outline.md">this page</a> for a full outline of the program, and <a href="http://www.datacarpentry.org/mentoring/">this page</a> for further mentoring opportunities." 
   - title: "Instructor-Helper Retreat"
-    description: "In November 2015, Software Carpentry and Data Carpentry instructors and helpers got together 
-    together at sites around the world for a day of sharing skills, trying out new lessons and ideas and discussing all 
-    things instructor and helper related."
+    description: "In November 2015, Software Carpentry and Data Carpentry instructors and helpers got together at sites around the world for a day of sharing skills, trying out new lessons and ideas and discussing all things instructor and helper related."
   - title: "Archived: Pre- and Post- Workshop Debriefing Session"
-    description: "Before launching the Instructor Discussion Sessions, we formerly hosted separate pre- and post-workshop 
-    debriefing sessions. We are grateful to all the hosts and participants who attended these sessions. As a group, we 
-    posted <a href="http://software-carpentry.org/blog/categories/#debriefing">25 post-workshop debriefing blogs</a> last year. 
-    See <a href="http://software-carpentry.org/blog/categories/#debriefing">this link</a> for links to these blogs sorted by date. "
+    description: "Before launching the Instructor Discussion Sessions, we formerly hosted separate pre- and post-workshop debriefing sessions. We are grateful to all the hosts and participants who attended these sessions. As a group, we posted <a href="http://software-carpentry.org/blog/categories/#debriefing">25 post-workshop debriefing blogs</a> last year. See <a href="http://software-carpentry.org/blog/categories/#debriefing">this link</a> for links to these blogs sorted by date. "
 members:
   
   - name: "Belinda Weaver"
@@ -96,7 +84,7 @@ members:
   - name: "Tracy Teal"
     twitter: "@tracykteal"
     twitterURL: "https://twitter.com/tracykteal"  
-excerpt: The Mentoring Subcommittee supports instructors as they progress through training, teaching, curriculum development, and other community-related activities
+excerpt: The Mentoring Subcommittee supports instructors as they progress through training, teaching, curriculum development, and other community-related activities 
 ---
 
 <h1>{{page.subcomName}} Subcommittee</h1>
