--- a/pages/subcom_mentorship.html
+++ b/pages/subcom_mentorship.html
@@ -3,20 +3,8 @@ layout: page-fullwidth
 permalink: /join/subcom/mentoring/
 email: 'mentoring@lists.software-carpentry.org'
 subcomName: Mentoring
-purpose: "The Mentoring Subcommittee was established in 2015 to develop and maintain a mentorship program to support instructors 
-as they progress through training, teaching, curriculum development, and other community-related activities. We help promote 
-community-building and networking by providing (virtual) spaces where instructors from all over the world can share teaching success 
-stories and discuss strategies for overcoming challenges."
-join: "<p>We welcome new members to the Mentoring Subcommittee with open arms!</p><p><b>Hosting discussion sessions:</b> If 
-you have taught at least two workshops and enjoy discussing teaching and Software and Data Carpentry, feel free to sign up as a co-host for our 
-regularly hosted discussion sessions, found at <a href='{{site.pad_url}}/instructor-discussion'>this etherpad</a>.</p><p><b>Mentoring
-committee activities</b>: If you are interested in joining our community-building efforts, please send an email
- to <a href='mailto:mentoring@lists.software-carpentry.org'>mentoring@lists.software-carpentry.org</a>.Currently, 
- members of the Mentoring Subcommittee spend around 2-8 hours each month with subcommittee activities. These 
-include:<ul><li>attending bi-monthly subcommittee meetings where ongoing projects and new ideas are discussed; 
-see <a href="http://pad.software-carpentry.org/scf-mentoring">our meeting etherpad</a></li><li>hosting one or two 
-instructor discussion sessions per month; <a href="http://pad.software-carpentry.org/instructor-discussion">see the 
-discussion etherpads</a></li><li>writing blog posts about our ongoing and proposed activities</li><li>and possibly more! 
+purpose: "The Mentoring Subcommittee was established in 2015 to develop and maintain a mentorship program to support instructors as they progress through training, teaching, curriculum development, and other community-related activities. We help promote community-building and networking by providing (virtual) spaces where instructors from all over the world can share teaching success stories and discuss strategies for overcoming challenges."
+join: "<p>We welcome new members to the Mentoring Subcommittee with open arms!</p><p><b>Hosting discussion sessions:</b> If you have taught at least two workshops and enjoy discussing teaching and Software and Data Carpentry, feel free to sign up as a co-host for our regularly hosted discussion sessions, found at <a href="{{site.pad_url}}/instructor-discussion">this etherpad</a>.</p><p><b>Mentoring committee activities</b>: If you are interested in joining our community-building efforts, please send an email to <a href='mailto:mentoring@lists.software-carpentry.org'>mentoring@lists.software-carpentry.org</a>.Currently, members of the Mentoring Subcommittee spend around 2-8 hours each month with subcommittee activities. These include:<ul><li>attending bi-monthly subcommittee meetings where ongoing projects and new ideas are discussed; see <a href="http://pad.software-carpentry.org/scf-mentoring">our meeting etherpad</a></li><li>hosting one or two instructor discussion sessions per month; <a href="http://pad.software-carpentry.org/instructor-discussion">see the discussion etherpads</a></li><li>writing blog posts about our ongoing and proposed activities</li><li>and possibly more! 
 
 We are open to new ideas!</li></ul></p>"
 activities: 
