last try before I revert

--- a/pages/subcom_mentorship.html
+++ b/pages/subcom_mentorship.html
@@ -9,7 +9,7 @@ activities:
   - title: "Instructor Discussion Sessions"
     description: "Each week, we host four instructor discussion sessions. The sessions provide a forum where experienced and novice instructors can discuss past and/or upcoming workshops. Instructors who have just taught, are about to teach, or have just completed instructor training will  receive an email invitation to these meetings, but these sessions are open to anyone."
   - title: "Mentoring Groups"
-    description: "Mentoring groups support instructors by matching them with a personal mentor. Mentors guide small groups of mentees through specific goals including preparing to teach a workshop, maintaining lessons,  building local communities, and organizing workshops. See <a href="https://github.com/carpentries/mentoring/blob/master/mentoring-groups/program-outline.md">this page</a> for a full outline of the program, and <a href="http://www.datacarpentry.org/mentoring/">this page</a> for further mentoring opportunities."
+    description: "Mentoring groups support instructors by matching them with a personal mentor. See <a href='http://www.datacarpentry.org/mentoring/'>this page</a> for further mentoring opportunities."
   - title: "Instructor-Helper Retreat"
     description: "In November 2015, Software Carpentry and Data Carpentry instructors and helpers got together together at sites around the world for a day of sharing skills, trying out new lessons and ideas and discussing all things instructor and helper related."
   - title: "Archived: Pre- and Post- Workshop Debriefing Session"
