links to recent meetings

--- a/pages/scf.html
+++ b/pages/scf.html
@@ -179,6 +179,10 @@ excerpt: The Software Carpentry Foundation oversees all aspects of Software Carp
 <div class="medium-2 columns">
     <h3>2017</h3>
     <ul>
+      <li><a href="{{page.minutes}}/minutes-2017-10-10.md">2017-10-10</a></li>
+      <li><a href="{{page.minutes}}/minutes-2017-09-12.md">2017-09-12</a></li>
+      <li><a href="{{page.minutes}}/minutes-2017-07-03.md">2017-07-03</a></li>
+      <li><a href="{{page.minutes}}/minutes-2017-06-05.md">2017-06-05</a></li>
       <li><a href="{{page.minutes}}/minutes-2017-05-10.md">2017-05-10</a></li>
       <li><a href="{{page.minutes}}/minutes-2017-05-01.md">2017-05-01</a></li>
       <li><a href="{{page.minutes}}/minutes-2017-04-03.md">2017-04-03</a></li>
