--- a/pages/join.html
+++ b/pages/join.html
@@ -19,7 +19,7 @@ Individuals can also support us by getting involved. Teaching or helping at work
   <a href="https://carpentries.typeform.com/to/BK55ld">blogging for us</a>, talking to others in 
   our <a href="https://swc-slack-invite.herokuapp.com/">slack channel</a>, following us on <a href="https://www.facebook.com/carpentries/">Facebook</a>, and contributing to our email 
   discussions are just some of the ways you can feel
-part of the global Carpentries community. See all our pathways and channels below.
+part of the global Carpentries community. And don't forget <strong><a href="http://www.carpentrycon.org/">CarpentryCon 2018</a></strong> which will be our key community building and networking event of 2018. You can <a href="https://carpentries.us14.list-manage.com/subscribe?u=46d7513c798c6bd41e5f58f4a&id=8b4fabb707">sign up for updates</a>. See all our pathways and channels below.
 </p>
 
 <h2 id="newsletter">Newsletter</h2>
