--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -80,8 +80,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_url}}/sql-novice-survey" target="_blank" class="icon-github" title="Using Databases and SQL"></a></td>
     <td><a href="{{site.github_io_url}}/sql-novice-survey/reference" target="_blank" class="icon-eye" title="Using Databases and SQL"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>,
-      <a href="{{site.baseurl}}/team/#mckay_sheldon">Sheldon McKay</a>
+      <a href="{{site.baseurl}}/team/#cabunoc_abigail">Abigail Cabunoc Mayes</a>
     </td>
   </tr>
   <tr id="python">
