--- a/pages/join.html
+++ b/pages/join.html
@@ -5,7 +5,7 @@ title: Join Us
 redirect_from:
   - /pages/join.html
   - /pages/training.html
-excerpt: Find ways to engage with the Software Carpentry Community. Subscribe to our newsletter, join our slack channel, or attend a community event.
+excerpt: Find ways to engage with the Software Carpentry Community. Subscribe to our newsletter, join our Slack channel, or attend a community event.
 ---
 
 <p>
@@ -17,7 +17,7 @@ Individuals can also support us by getting involved. Teaching or helping at work
   committees like <a href="https://software-carpentry.org/join/subcom/mentoring/">Mentoring</a> or task forces 
   like <a href="https://github.com/carpentries/carpentrycon">CarpentryCon</a>, 
   <a href="https://carpentries.typeform.com/to/BK55ld">blogging for us</a>, talking to others in 
-  our <a href="https://swc-slack-invite.herokuapp.com/">slack channel</a>, following us on <a href="https://www.facebook.com/carpentries/">Facebook</a>, and contributing to our email 
+  our <a href="https://swc-slack-invite.herokuapp.com/">Slack channel</a>, following us on <a href="https://www.facebook.com/carpentries/">Facebook</a>, and contributing to our email 
   discussions are just some of the ways you can feel
 part of the global Carpentries community. And don't forget <strong><a href="http://www.carpentrycon.org/">CarpentryCon 2018</a></strong> which will be our key community building and networking event of 2018. You can <a href="https://carpentries.us14.list-manage.com/subscribe?u=46d7513c798c6bd41e5f58f4a&id=8b4fabb707">sign up for updates</a>. See all our pathways and channels below.
 </p>
