--- a/pages/lessons.html
+++ b/pages/lessons.html
@@ -114,7 +114,7 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td><a href="{{site.github_url}}/r-novice-inflammation" target="_blank" class="icon-github" title="Programming with R"></a></td>
     <td><a href="{{site.github_io_url}}/r-novice-inflammation/reference" target="_blank" class="icon-eye" title="Programming with R"></a></td>
     <td>
-      <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>,
+      <a href="{{site.baseurl}}/team/#chen_daniel">Daniel Chen</a>, Katrin Leinweber
     </td>
   </tr>
   <tr id="r-reproducible">
@@ -125,7 +125,8 @@ excerpt: All our lessons are created collaboratively and can be freely re-used, 
     <td>
       <a href="{{site.baseurl}}/team/#wright_thomas">Thomas Wright</a>,
       <a href="{{site.baseurl}}/team/#zimmerman_naupaka">Naupaka Zimmerman</a>,
-      <a href="{{site.baseurl}}/team/#oliver_jeffrey">Jeffrey Oliver</a>
+      <a href="{{site.baseurl}}/team/#oliver_jeffrey">Jeffrey Oliver</a>,
+      David Mawdsley
     </td>
   </tr>
   <tr id="matlab">
